<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="320dp">

        <TextView
            android:id="@+id/numeroCot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numeroCotizacion"
            android:textStyle="normal"
            android:textColor="@color/black"
            />


        <EditText
            android:id="@+id/numeroCotEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/describir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textStyle="normal"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/describirEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/precioT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textStyle="normal"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/precioEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/porcentajeT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentaje"
            android:textStyle="normal"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/porcentajeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/plazoT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plazo"
            android:textStyle="normal"
            android:textColor="@color/black"
            />

        <Spinner
            android:id="@+id/plazos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/pagoI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagoInicial"
            android:textStyle="normal"
            android:textColor="@color/black"
            />


        <TextView
            android:id="@+id/totalF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalFinanciar"
            android:textStyle="normal"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/pagoM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagoMensual"
            android:textStyle="normal"
            android:textColor="@color/black"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCalcular"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="#BAF7A0"
            android:layout_marginStart="60dp"
            android:layout_marginTop="-35dp"
            android:text="@string/botonCalc">

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegresar"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="#BAF7A0"
            android:layout_marginStart="60dp"
            android:layout_marginTop="-95dp"
            android:text="@string/botonRegresar">

        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>